# robothector

./: .gitignore  CLAUDE.md  STATUS.md  angle.py  angle_pigpio.py  base_palette.kra  joystick.py  joystick_test.py  pinout.md  pyproject.toml  robothector.service
.beads/: issues.jsonl
client/: __main__.py  discovery.py  joystick.py  main.py  network.py  test_connection.py  ui.py  video.py
docs/: audio-design.md  protocol.md  steamdeck-env.md
scripts/: install-service.sh
server/: __main__.py  camera.py  control.py  discovery.py  hardware_test.py  main.py  motor_test.py  motors.py  sirens.py
webapp/: app.py
webapp/templates/: index.html
